canary-rollout/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
  namespace: lessons
spec:
  ports:
    - port: 4565
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
  namespace: lessons
spec:
  ports:
    - port: 4565
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo
